@@ -1,3 +1,8 @@
+2012-12-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Reco_trf.py Add --extraignorefilter to LODPK
+    * ProdSysDicTools.py Convert %2B to + in tag values returned from panda
+    * Tagging as PATJobTransforms-00-04-40
+
 2012-11-26 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Removed NTUP_TOPFJET from all transformations on the request
 	  of Kevin Finelli. (Type now merged with NTUP_TOPJET.)
@@ -8,7 +13,6 @@
 	* Tagging as PATJobTransforms-00-04-38
 
 2012-11-16  Karsten Koeneke  <karsten.koeneke@cern.ch>
-
 	* scripts/Reco_trf.py (ListOfDefaultPositionalKeys): Adding stream
 	* Tagging as PATJobTransforms-00-04-37
 
